# PerformanceController

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: ci.yml  dependency-check.yml
src/: lib.rs  logging_init.rs  main.rs  tui.rs
src/component_details/: gpu.rs
src/trainable_model_integ/: gpu_detailing.rs  gpu_info.csv  mod.rs
src/tui/: chat.rs  design.rs
