[package]
name = "PerformanceController"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
sysinfo = "0.38.4"
nvml-wrapper = { version = "0.12.1", features = ["legacy-functions"] }
serde = "1.0.228"
ratatui = "0.30.0"
crossterm = "0.29.0"
ratatui-core = "0.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
openai = "1.1.1"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
